# spiel

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md
.github/workflows/: ci.yml
examples/: filter_audio_data.rs  list_voices.rs  list_voices_client.rs  provider.rs  test_provider.rs  write_something_to_files.rs  write_something_to_pipe.rs
proptest-regressions/: proptests.txt  protocol.txt
src/: client.rs  lib.rs  proptests.rs  protocol.rs  proxy.rs  reader.rs  writer.rs
