[package]
name = "spiel"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["dep:zbus", "alloc", "std"]
reader = ["alloc"]
smol = ["dep:futures-lite", "dep:pin-project"]
tokio = []
async-std = []
std = []
alloc = []

[dependencies]
assert_matches = { version = "1.5.0", default-features = false }
bytes = { version = "1.9.0", default-features = false }
futures-lite = { version = "2.6.0", default-features = false, optional = true }
nom = { version = "8.0.0", default-features = false }
pin-project = { version = "1.1.8", default-features = false, optional = true }
zbus = { version = "4.1.2", optional = true }
zerocopy = { version = "0.8.17", default-features = false, features = ["derive", "zerocopy-derive"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread","net","io-util"] }
spiel = { path = ".", features = ["client"] }
hound = "3.5.1"
itertools = "0.14.0"
